gcc/testsuite/rust/rustc/ui/does-nothing.rs
fn main() { println!("doing"); this_does_nothing_what_the; println!("boing"); }
// { dg-error ".E0425." "" { target *-*-* } .-1 }

